--- a/packages/core/src/tests/expanding-search/fullWidth/index.html
+++ b/packages/core/src/tests/expanding-search/fullWidth/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
 <body style="display: flex; width: 100%;">
   <div style="display: flex; width: 100%; margin: 2rem">
     <ix-button style=" margin-right: 1rem">BEFORE</ix-button>
-    <ix-expanding-search placeholder="Search..."></ix-expanding-search>
+    <ix-expanding-search full-width placeholder="Search..."></ix-expanding-search>
     <ix-button style="margin-left: 1rem">AFTER</ix-button>
   </div>
   <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
