--- a/packages/angular-test-app/src/preview-examples/tooltip.html
+++ b/packages/angular-test-app/src/preview-examples/tooltip.html
@@ -1,5 +1,5 @@
 <div style="padding: 4rem">
-  <ix-button class="any-class" style="margin-right: 4rem;">Hover me</ix-button>
+  <ix-button class="any-class" style="margin-right: 4rem">Hover me</ix-button>
   <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
 
   <ix-button my-custom-special-selector="any-value">Also hover me</ix-button>
