--- a/packages/html-test-app/src/preview-examples/tooltip.html
+++ b/packages/html-test-app/src/preview-examples/tooltip.html
@@ -6,24 +6,26 @@ SPDX-License-Identifier: MIT
 
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Blind example</title>
+  </head>
 
-<head>
-  <title>Blind example</title>
-</head>
+  <body class="theme-brand-dark">
+    <!-- Preview code -->
+    <div style="padding: 4rem">
+      <ix-button class="any-class" style="margin-right: 4rem"
+        >Hover me</ix-button
+      >
+      <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
 
-<body class="theme-brand-dark">
-  <!-- Preview code -->
-  <div style="padding: 4rem">
-    <ix-button class="any-class" style="margin-right: 4rem;">Hover me</ix-button>
-    <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
-
-    <ix-button my-custom-special-selector="any-value">Also hover me</ix-button>
-    <ix-tooltip for="[my-custom-special-selector='any-value']">
-      Custom selector
-    </ix-tooltip>
-  </div>
-  <!-- Preview code -->
-  <script type="module" src="./init.js"></script>
-</body>
-
+      <ix-button my-custom-special-selector="any-value"
+        >Also hover me</ix-button
+      >
+      <ix-tooltip for="[my-custom-special-selector='any-value']">
+        Custom selector
+      </ix-tooltip>
+    </div>
+    <!-- Preview code -->
+    <script type="module" src="./init.js"></script>
+  </body>
 </html>
