--- a/packages/html-test-app/src/preview-examples/tooltip.html
+++ b/packages/html-test-app/src/preview-examples/tooltip.html
@@ -9,12 +9,20 @@ SPDX-License-Identifier: MIT
   <head>
     <title>Blind example</title>
   </head>
+
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div style="padding: 4rem">
-      <ix-button data-tooltip="myTooltip">Hover me</ix-button>
-      <ix-tooltip for="[data-tooltip='myTooltip']">
-        Some example content
+      <ix-button class="any-class" style="margin-right: 4rem"
+        >Hover me</ix-button
+      >
+      <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
+
+      <ix-button my-custom-special-selector="any-value"
+        >Also hover me</ix-button
+      >
+      <ix-tooltip for="[my-custom-special-selector='any-value']">
+        Custom selector
       </ix-tooltip>
     </div>
     <!-- Preview code -->
