--- a/packages/core/src/tests/event-list/custom-height/index.html
+++ b/packages/core/src/tests/event-list/custom-height/index.html
@@ -18,6 +18,11 @@ SPDX-License-Identifier: MIT
       <ix-event-list-item color="color-primary">Test 1</ix-event-list-item>
       <ix-event-list-item color="color-primary">Test 2</ix-event-list-item>
     </ix-event-list>
+
+    <ix-event-list item-height="200">
+      <ix-event-list-item color="color-primary">Test 1</ix-event-list-item>
+      <ix-event-list-item color="color-primary">Test 2</ix-event-list-item>
+    </ix-event-list>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
