--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -6,26 +6,65 @@ SPDX-License-Identifier: MIT
 
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
+    <title>Stencil Component Starter</title>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-  <title>Stencil Component Starter</title>
+    <script type="module" src="/build/siemens-ix.esm.js"></script>
+    <script nomodule src="/build/siemens-ix.js"></script>
 
-  <script type="module" src="/build/siemens-ix.esm.js"></script>
-  <script nomodule src="/build/siemens-ix.js"></script>
+    <link rel="stylesheet" href="/build/siemens-ix.css" />
+    <link
+      rel="stylesheet"
+      href="/build/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+    />
+    <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
+    <script type="module">
+      import { defineCustomElements } from '/build/ix-brand-theme/loader/index.es2017.js';
+      defineCustomElements();
+    </script>
+    <style>
+      .example > ix-chip {
+        margin-bottom: 0.5rem;
+      }
+      .example {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        max-width: 20rem;
+      }
+    </style>
+  </head>
 
-  <link rel="stylesheet" href="/build/siemens-ix.css" />
-  <link rel="stylesheet" href="/build/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css" />
-  <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
-  <script type="module">
-    import { defineCustomElements } from '/build/ix-brand-theme/loader/index.es2017.js';
-    defineCustomElements();
-  </script>
-</head>
+  <body style="margin: 0px; height: 100vh">
+    <div class="example">
+      <ix-chip closable outline> Primary </ix-chip>
+      <ix-chip icon="print">Primary with icon</ix-chip>
+      <ix-chip icon="print" style="width: 10rem" closable> Primary </ix-chip>
 
-<body style="margin: 0px; height: 100vh">
-  <my-component />
-</body>
-
+      <ix-chip variant="critical" closable outline> Alarm </ix-chip>
+      <ix-chip variant="alarm" icon="print"> Alarm with icon </ix-chip>
+      <ix-chip variant="alarm" icon="print" style="width: 10rem" closable>
+        Alarm
+      </ix-chip>
+      <ix-chip variant="warning" icon="print" style="width: 10rem" closable>
+        Alarm
+      </ix-chip>
+      <ix-chip
+        background="purple"
+        color="green"
+        variant="custom"
+        icon="print"
+        style="width: 10rem"
+        closable
+      >
+        Custom
+      </ix-chip>
+    </div>
+  </body>
 </html>
