--- a/packages/core/src/tests/menu-avatar/image/index.html
+++ b/packages/core/src/tests/menu-avatar/image/index.html
@@ -24,6 +24,9 @@ SPDX-License-Identifier: MIT
         <ix-menu-item>Item 3</ix-menu-item>
       </ix-menu>
     </ix-basic-navigation>
+    <script>
+      document.querySelector('ix-menu').supportedModes = ['small', 'medium'];
+    </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
