test: update snapshots

--- a/packages/core/src/tests/menu-about/basic/index.html
+++ b/packages/core/src/tests/menu-about/basic/index.html
@@ -25,6 +25,9 @@ SPDX-License-Identifier: MIT
         </ix-menu-about>
       </ix-menu>
     </ix-basic-navigation>
+    <script>
+      document.querySelector('ix-menu').supportedModes = ['small', 'medium'];
+    </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
