--- a/packages/core/src/tests/basic-navigation/basic/index.html
+++ b/packages/core/src/tests/basic-navigation/basic/index.html
@@ -12,6 +12,15 @@ SPDX-License-Identifier: MIT
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <title>Stencil Component Starter</title>
+    <style>
+      main {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+      }
+    </style>
   </head>
   <body>
     <ix-basic-navigation application-name="Test application!">
