--- a/packages/html-test-app/src/preview-examples/menu-category.html
+++ b/packages/html-test-app/src/preview-examples/menu-category.html
@@ -7,14 +7,24 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Basic navigation without header example</title>
+    <title>Vertical tabs example</title>
+    <style>
+      ix-basic-navigation {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-basic-navigation hide-header>
+    <ix-basic-navigation>
       <ix-menu>
-        <ix-menu-item>Item 1</ix-menu-item>
-        <ix-menu-item>Item 2</ix-menu-item>
+        <ix-menu-item home icon="home">Home</ix-menu-item>
+        <ix-menu-item icon="globe">Normal Tab</ix-menu-item>
+        <ix-menu-category label="Top level Category" icon="rocket">
+          <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
+          <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
+        </ix-menu-category>
       </ix-menu>
     </ix-basic-navigation>
     <!-- Preview code -->
