--- a/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
+++ b/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
@@ -15,11 +15,11 @@ SPDX-License-Identifier: MIT
       <ix-menu-avatar image="https://ui-avatars.com/api/?name=John+Doe">
         <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
       </ix-menu-avatar>
-      <ix-menu-item home tab-icon="home"> Home </ix-menu-item>
-      <ix-menu-item tab-icon="globe"> Normal Tab </ix-menu-item>
-      <ix-menu-item tab-icon="star" disabled> Disabled tab </ix-menu-item>
-      <ix-menu-item tab-icon="star"> With other icon </ix-menu-item>
-      <ix-menu-item tab-icon="globe" style="display: none">
+      <ix-menu-item home icon="home"> Home </ix-menu-item>
+      <ix-menu-item icon="globe"> Normal Tab </ix-menu-item>
+      <ix-menu-item icon="star" disabled> Disabled tab </ix-menu-item>
+      <ix-menu-item icon="star"> With other icon </ix-menu-item>
+      <ix-menu-item icon="globe" style="display: none">
         Should not be visible
       </ix-menu-item>
     </ix-menu>
