feat: fix dropdown alignment

--- a/packages/html-test-app/src/preview-examples/dropdown.html
+++ b/packages/html-test-app/src/preview-examples/dropdown.html
@@ -13,9 +13,12 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <ix-button id="triggerId">Open</ix-button>
     <ix-dropdown trigger="triggerId">
-      <ix-dropdown-item label="Item 1"></ix-dropdown-item>
+      <ix-dropdown-header label="Category"></ix-dropdown-header>
       <ix-dropdown-item label="Item 2"></ix-dropdown-item>
       <ix-dropdown-item label="Item 3"></ix-dropdown-item>
+      <ix-dropdown-item label="Item 4"></ix-dropdown-item>
+      <ix-divider></ix-divider>
+      <ix-dropdown-item label="Item 5"></ix-dropdown-item>
     </ix-dropdown>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
