fix(core): change variant values to lower case

--- a/packages/core/src/tests/dropdown-button/basic/index.html
+++ b/packages/core/src/tests/dropdown-button/basic/index.html
@@ -21,48 +21,48 @@ SPDX-License-Identifier: MIT
   <body>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Primary"
+      variant="primary"
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Primary"
+      variant="primary"
       outline
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Primary"
+      variant="primary"
       ghost
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Primary"
+      variant="primary"
       disabled
       icon="checkboxes"
     ></ix-dropdown-button>
 
     <ix-dropdown-button
       label="Dropdown"
-      variant="Secondary"
+      variant="secondary"
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Secondary"
+      variant="secondary"
       outline
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Secondary"
+      variant="secondary"
       ghost
       icon="checkboxes"
     ></ix-dropdown-button>
     <ix-dropdown-button
       label="Dropdown"
-      variant="Secondary"
+      variant="secondary"
       disabled
       icon="checkboxes"
     ></ix-dropdown-button>
