--- a/packages/core/src/tests/flip-tile/custom-sizes/index.html
+++ b/packages/core/src/tests/flip-tile/custom-sizes/index.html
@@ -31,7 +31,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile width="24" height="20" state="Primary">
+      <ix-flip-tile width="24" height="20" state="primary">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -40,7 +40,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile width="auto" height="auto" state="Info">
+      <ix-flip-tile width="auto" height="auto" state="info">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
