--- a/packages/core/src/tests/content-header/basic/index.html
+++ b/packages/core/src/tests/content-header/basic/index.html
@@ -27,13 +27,13 @@ SPDX-License-Identifier: MIT
       header-title="content title"
       header-subtitle="subtitle content"
     >
-      <ix-icon-button icon="pen" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="pen" ghost="{true}" variant="primary">
         Button1
       </ix-icon-button>
-      <ix-icon-button icon="trashcan" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="trashcan" ghost="{true}" variant="primary">
         Button2
       </ix-icon-button>
-      <ix-icon-button icon="context-menu" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="context-menu" ghost="{true}" variant="primary">
         Button3
       </ix-icon-button>
     </ix-content-header>
