--- a/packages/core/src/tests/content-header/secondary/index.html
+++ b/packages/core/src/tests/content-header/secondary/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-content-header
-      variant="Secondary"
+      variant="secondary"
       has-back-button="true"
       header-title="content title"
       header-subtitle="subtitle content asdf"
@@ -25,27 +25,27 @@ SPDX-License-Identifier: MIT
       <ix-button ghost="{true}">Button3</ix-button>
     </ix-content-header>
     <ix-content-header
-      variant="Secondary"
+      variant="secondary"
       header-title="content title"
       header-subtitle="subtitle content asdf"
     >
-      <ix-icon-button icon="pen" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="pen" ghost="{true}" variant="primary">
         Button1
       </ix-icon-button>
-      <ix-icon-button icon="trashcan" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="trashcan" ghost="{true}" variant="primary">
         Button2
       </ix-icon-button>
-      <ix-icon-button icon="context-menu" ghost="{true}" variant="Primary">
+      <ix-icon-button icon="context-menu" ghost="{true}" variant="primary">
         Button3
       </ix-icon-button>
     </ix-content-header>
     <ix-content-header
-      variant="Secondary"
+      variant="secondary"
       header-title="content title with a really loooooooooong name name name name name name name name name name name name"
       header-subtitle="subtitle content  with a really loooooooooong name name name name name name name name name name name name"
     ></ix-content-header>
     <ix-content-header
-      variant="Secondary"
+      variant="secondary"
       header-title="content title"
     ></ix-content-header>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
