--- a/packages/core/src/tests/flip-tile/basic/index.html
+++ b/packages/core/src/tests/flip-tile/basic/index.html
@@ -31,7 +31,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile state="Primary">
+      <ix-flip-tile state="primary">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -40,7 +40,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile state="Info">
+      <ix-flip-tile state="info">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -49,7 +49,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile state="Warning">
+      <ix-flip-tile state="warning">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -58,7 +58,7 @@ SPDX-License-Identifier: MIT
           </div>
         </div>
       </ix-flip-tile>
-      <ix-flip-tile state="Alarm">
+      <ix-flip-tile state="alarm">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
