--- a/packages/html-test-app/src/preview-examples/button-grey-secondary.html
+++ b/packages/html-test-app/src/preview-examples/button-grey-secondary.html
@@ -8,10 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" outline variant="Secondary">
-        Button
-      </ix-button>
-      <ix-button class="m-1" disabled outline variant="Secondary">
+      <ix-button class="m-1" outline variant="secondary"> Button </ix-button>
+      <ix-button class="m-1" disabled outline variant="secondary">
         Button
       </ix-button>
     </div>
