--- a/packages/html-test-app/src/preview-examples/button-selected.html
+++ b/packages/html-test-app/src/preview-examples/button-selected.html
@@ -11,8 +11,8 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-button class="m-1" variant="Secondary" ghost>Not selected</ix-button>
-    <ix-button class="m-1" variant="Secondary" ghost selected
+    <ix-button class="m-1" variant="secondary" ghost>Not selected</ix-button>
+    <ix-button class="m-1" variant="secondary" ghost selected
       >Selected</ix-button
     >
     <!-- Preview code -->
