--- a/packages/html-test-app/src/preview-examples/button-text-icon.html
+++ b/packages/html-test-app/src/preview-examples/button-text-icon.html
@@ -8,10 +8,10 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="Primary">
+      <ix-button class="m-1" variant="primary">
         <ix-icon name="star"></ix-icon>Button
       </ix-button>
-      <ix-button class="m-1" variant="Secondary">
+      <ix-button class="m-1" variant="secondary">
         <ix-icon name="star"></ix-icon>Button
       </ix-button>
       <ix-button class="m-1" outline>
