--- a/packages/html-test-app/src/preview-examples/buttons.html
+++ b/packages/html-test-app/src/preview-examples/buttons.html
@@ -8,12 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="Primary">
-        Button
-      </ix-button>
-      <ix-button class="m-1" disabled variant="Primary">
-        Button
-      </ix-button>
+      <ix-button class="m-1" variant="primary"> Button </ix-button>
+      <ix-button class="m-1" disabled variant="primary"> Button </ix-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
