--- a/packages/html-test-app/src/preview-examples/content-header-no-back.html
+++ b/packages/html-test-app/src/preview-examples/content-header-no-back.html
@@ -12,17 +12,17 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-content-header
-      variant="Secondary"
+      variant="secondary"
       header-title="Content title"
       header-subtitle="Subtitle"
     >
-      <ix-icon-button icon="pen" ghost="true" variant="Primary">
+      <ix-icon-button icon="pen" ghost="true" variant="primary">
         Button1
       </ix-icon-button>
-      <ix-icon-button icon="trashcan" ghost="true" variant="Primary">
+      <ix-icon-button icon="trashcan" ghost="true" variant="primary">
         Button2
       </ix-icon-button>
-      <ix-icon-button icon="context-menu" ghost="true" variant="Primary">
+      <ix-icon-button icon="context-menu" ghost="true" variant="primary">
         Button3
       </ix-icon-button>
     </ix-content-header>
