--- a/packages/html-test-app/src/preview-examples/dropdown-button.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-button.html
@@ -26,13 +26,13 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="example">
-      <ix-dropdown-button label="Dropdown" variant="Primary" icon="checkboxes">
+      <ix-dropdown-button label="Dropdown" variant="primary" icon="checkboxes">
         <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
         <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
-        variant="Primary"
+        variant="primary"
         outline
         icon="checkboxes"
       >
@@ -41,7 +41,7 @@ SPDX-License-Identifier: MIT
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
-        variant="Primary"
+        variant="primary"
         ghost
         icon="checkboxes"
       >
@@ -50,7 +50,7 @@ SPDX-License-Identifier: MIT
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
-        variant="Primary"
+        variant="primary"
         disabled
         icon="checkboxes"
       >
