--- a/packages/html-test-app/src/preview-examples/flip-tile.html
+++ b/packages/html-test-app/src/preview-examples/flip-tile.html
@@ -42,7 +42,7 @@ SPDX-License-Identifier: MIT
         <ix-flip-tile-content> Example 2 </ix-flip-tile-content>
       </ix-flip-tile>
 
-      <ix-flip-tile state="Primary">
+      <ix-flip-tile state="primary">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -54,7 +54,7 @@ SPDX-License-Identifier: MIT
         <ix-flip-tile-content> Example 2 </ix-flip-tile-content>
       </ix-flip-tile>
 
-      <ix-flip-tile state="Info">
+      <ix-flip-tile state="info">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -66,7 +66,7 @@ SPDX-License-Identifier: MIT
         <ix-flip-tile-content> Example 2 </ix-flip-tile-content>
       </ix-flip-tile>
 
-      <ix-flip-tile state="Warning">
+      <ix-flip-tile state="warning">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
@@ -78,7 +78,7 @@ SPDX-License-Identifier: MIT
         <ix-flip-tile-content> Example 2 </ix-flip-tile-content>
       </ix-flip-tile>
 
-      <ix-flip-tile state="Alarm">
+      <ix-flip-tile state="alarm">
         <div slot="header">Flip header</div>
         <div slot="footer">
           <div>Predicted maintenance date</div>
