--- a/packages/html-test-app/src/preview-examples/button-grey-ghost.html
+++ b/packages/html-test-app/src/preview-examples/button-grey-ghost.html
@@ -8,8 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" ghost variant="Secondary"> Button </ix-button>
-      <ix-button class="m-1" disabled ghost variant="Secondary">
+      <ix-button class="m-1" ghost variant="secondary"> Button </ix-button>
+      <ix-button class="m-1" disabled ghost variant="secondary">
         Button
       </ix-button>
     </div>
