--- a/packages/html-test-app/src/preview-examples/button-grey.html
+++ b/packages/html-test-app/src/preview-examples/button-grey.html
@@ -8,12 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="Secondary">
-        Button
-      </ix-button>
-      <ix-button class="m-1" disabled variant="Secondary">
-        Button
-      </ix-button>
+      <ix-button class="m-1" variant="secondary"> Button </ix-button>
+      <ix-button class="m-1" disabled variant="secondary"> Button </ix-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
