--- a/packages/html-test-app/src/preview-examples/button-secondary.html
+++ b/packages/html-test-app/src/preview-examples/button-secondary.html
@@ -8,10 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" outline variant="Primary">
-        Button
-      </ix-button>
-      <ix-button class="m-1" disabled outline variant="Primary">
+      <ix-button class="m-1" outline variant="primary"> Button </ix-button>
+      <ix-button class="m-1" disabled outline variant="primary">
         Button
       </ix-button>
     </div>
