feat: rename tag and add headers

--- a/packages/core/src/tests/information-bar/basic/index.html
+++ b/packages/core/src/tests/information-bar/basic/index.html
@@ -1,7 +1,10 @@
 <!--
-SPDX-FileCopyrightText: 2023 Siemens AG
+ SPDX-FileCopyrightText: 2023 Siemens AG
 
-SPDX-License-Identifier: MIT
+ SPDX-License-Identifier: MIT
+
+ This source code is licensed under the MIT license found in the
+ LICENSE file in the root directory of this source tree.
 -->
 
 <html>
@@ -14,7 +17,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body style="padding: 2rem">
-    <test-component></test-component>
+    <ix-information-bar></ix-information-bar>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
