fix: icon spacing

--- a/packages/core/src/tests/modal/icon/index.html
+++ b/packages/core/src/tests/modal/icon/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-modal>
-      <ix-modal-header
+      <ix-modal-header icon="rocket"
         >Dialog title Dialog titleDialog titleDialog titleDialog titleDialog
         titleDialog title</ix-modal-header
       >
