--- a/packages/core/src/tests/icon-toggle-button/basic/index.html
+++ b/packages/core/src/tests/icon-toggle-button/basic/index.html
@@ -35,6 +35,56 @@ SPDX-License-Identifier: MIT
     <ix-icon-toggle-button icon="bulb" pressed></ix-icon-toggle-button>
     <ix-icon-toggle-button icon="bulb" disabled></ix-icon-toggle-button>
 
+    <ix-icon-toggle-button ghost outline="false" icon="bulb">
+      Normal
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button ghost outline="false" pressed icon="bulb">
+      Pressed
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button ghost outline="false" disabled icon="bulb">
+      Disabled
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button outline="false" icon="bulb">Normal</ix-icon-toggle-button>
+    <ix-icon-toggle-button outline="false" pressed icon="bulb">
+      Pressed
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button outline="false" disabled icon="bulb">
+      Disabled
+    </ix-icon-toggle-button>
+  </div>
+
+  <div>
+    <ix-icon-toggle-button variant="Primary" outline icon="bulb">
+      Normal
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button variant="Primary" outline pressed icon="bulb">
+      Pressed
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button variant="Primary" outline disabled icon="bulb">
+      Disabled
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button variant="Primary" ghost outline="false" icon="bulb">
+      Normal
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button
+      variant="Primary"
+      ghost
+      outline="false"
+      pressed
+      icon="bulb"
+    >
+      Pressed
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button
+      variant="Primary"
+      outline="false"
+      ghost
+      disabled
+      icon="bulb"
+    >
+      Disabled
+    </ix-icon-toggle-button>
+  </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
