fix(core/icon-toggle-button): set icon size

--- a/packages/core/src/tests/icon-toggle-button/basic/index.html
+++ b/packages/core/src/tests/icon-toggle-button/basic/index.html
@@ -19,51 +19,51 @@ SPDX-License-Identifier: MIT
     </style>
   </head>
   <body>
-    <ix-icon-toggle-button size="12" icon="bulb"></ix-icon-toggle-button>
-    <ix-icon-toggle-button size="12" icon="bulb" pressed>
+    <ix-icon-toggle-button size="12" icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button size="12" icon="checkboxes" pressed>
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button size="12" icon="bulb" disabled>
-    </ix-icon-toggle-button>
-
-    <ix-icon-toggle-button size="16" icon="bulb"></ix-icon-toggle-button>
-    <ix-icon-toggle-button size="16" icon="bulb" pressed>
-    </ix-icon-toggle-button>
-    <ix-icon-toggle-button size="16" icon="bulb" disabled>
+    <ix-icon-toggle-button size="12" icon="checkboxes" disabled>
     </ix-icon-toggle-button>
 
-    <ix-icon-toggle-button icon="bulb"></ix-icon-toggle-button>
-    <ix-icon-toggle-button icon="bulb" pressed></ix-icon-toggle-button>
-    <ix-icon-toggle-button icon="bulb" disabled></ix-icon-toggle-button>
+    <ix-icon-toggle-button size="16" icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button size="16" icon="checkboxes" pressed>
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button size="16" icon="checkboxes" disabled>
+    </ix-icon-toggle-button>
 
-    <ix-icon-toggle-button ghost outline="false" icon="bulb">
+    <ix-icon-toggle-button icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button icon="checkboxes" pressed></ix-icon-toggle-button>
+    <ix-icon-toggle-button icon="checkboxes" disabled></ix-icon-toggle-button>
+
+    <ix-icon-toggle-button ghost outline="false" icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button ghost outline="false" pressed icon="bulb">
+    <ix-icon-toggle-button ghost outline="false" pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button ghost outline="false" disabled icon="bulb">
+    <ix-icon-toggle-button ghost outline="false" disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" icon="bulb">Normal</ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" pressed icon="bulb">
+    <ix-icon-toggle-button outline="false" icon="checkboxes">Normal</ix-icon-toggle-button>
+    <ix-icon-toggle-button outline="false" pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" disabled icon="bulb">
+    <ix-icon-toggle-button outline="false" disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
   </div>
 
   <div>
-    <ix-icon-toggle-button variant="Primary" outline icon="bulb">
+    <ix-icon-toggle-button variant="Primary" outline icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" outline pressed icon="bulb">
+    <ix-icon-toggle-button variant="Primary" outline pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" outline disabled icon="bulb">
+    <ix-icon-toggle-button variant="Primary" outline disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" ghost outline="false" icon="bulb">
+    <ix-icon-toggle-button variant="Primary" ghost outline="false" icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
@@ -71,7 +71,7 @@ SPDX-License-Identifier: MIT
       ghost
       outline="false"
       pressed
-      icon="bulb"
+      icon="checkboxes"
     >
       Pressed
     </ix-icon-toggle-button>
@@ -80,7 +80,7 @@ SPDX-License-Identifier: MIT
       outline="false"
       ghost
       disabled
-      icon="bulb"
+      icon="checkboxes"
     >
       Disabled
     </ix-icon-toggle-button>
