--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
@@ -30,6 +30,12 @@ LICENSE file in the root directory of this source tree.
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
+      <ix-icon-toggle-button
+        class="m-1"
+        icon="checkboxes"
+        disabled
+        loading
+      ></ix-icon-toggle-button>
 
       <ix-icon-toggle-button
         class="m-1"
@@ -48,6 +54,13 @@ LICENSE file in the root directory of this source tree.
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
+      <ix-icon-toggle-button
+        class="m-1"
+        size="16"
+        icon="checkboxes"
+        disabled
+        loading
+      ></ix-icon-toggle-button>
 
       <ix-icon-toggle-button
         class="m-1"
@@ -65,6 +78,13 @@ LICENSE file in the root directory of this source tree.
         size="12"
         icon="checkboxes"
         disabled
+      ></ix-icon-toggle-button>
+      <ix-icon-toggle-button
+        class="m-1"
+        size="12"
+        icon="checkboxes"
+        disabled
+        loading
       ></ix-icon-toggle-button>
     </div>
     <!-- Preview code -->
