--- a/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
@@ -16,9 +16,16 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button class="m-1">Normal</ix-toggle-button>
-      <ix-toggle-button class="m-1" pressed>Pressed</ix-toggle-button>
-      <ix-toggle-button class="m-1" disabled> Disabled </ix-toggle-button>
+      <ix-toggle-button variant="Primary" class="m-1">Normal</ix-toggle-button>
+      <ix-toggle-button variant="Primary" class="m-1" pressed>
+        Pressed
+      </ix-toggle-button>
+      <ix-toggle-button variant="Primary" class="m-1" disabled>
+        Disabled
+      </ix-toggle-button>
+      <ix-toggle-button variant="Primary" class="m-1" disabled loading>
+        Loading
+      </ix-toggle-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
