fix(core/toggle-button|icon-toggle-button): update variant capitalization

--- a/packages/core/src/tests/icon-toggle-button/basic/index.html
+++ b/packages/core/src/tests/icon-toggle-button/basic/index.html
@@ -54,20 +54,20 @@ SPDX-License-Identifier: MIT
   </div>
 
   <div>
-    <ix-icon-toggle-button variant="Primary" outline icon="checkboxes">
+    <ix-icon-toggle-button variant="primary" outline icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" outline pressed icon="checkboxes">
+    <ix-icon-toggle-button variant="primary" outline pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" outline disabled icon="checkboxes">
+    <ix-icon-toggle-button variant="primary" outline disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="Primary" ghost outline="false" icon="checkboxes">
+    <ix-icon-toggle-button variant="primary" ghost outline="false" icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
-      variant="Primary"
+      variant="primary"
       ghost
       outline="false"
       pressed
@@ -76,7 +76,7 @@ SPDX-License-Identifier: MIT
       Pressed
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
-      variant="Primary"
+      variant="primary"
       outline="false"
       ghost
       disabled
