--- a/packages/core/src/tests/toggle-button/basic/index.html
+++ b/packages/core/src/tests/toggle-button/basic/index.html
@@ -42,20 +42,20 @@ SPDX-License-Identifier: MIT
     </div>
 
     <div>
-      <ix-toggle-button variant="Primary" class="m-1">
+      <ix-toggle-button variant="primary" class="m-1">
         Normal
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" outline class="m-1" pressed>
+      <ix-toggle-button variant="primary" outline class="m-1" pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" outline class="m-1" disabled>
+      <ix-toggle-button variant="primary" outline class="m-1" disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost outline="false" class="m-1">
+      <ix-toggle-button variant="primary" ghost outline="false" class="m-1">
         Normal
       </ix-toggle-button>
       <ix-toggle-button
-        variant="Primary"
+        variant="primary"
         ghost
         outline="false"
         class="m-1"
@@ -64,7 +64,7 @@ SPDX-License-Identifier: MIT
         Pressed
       </ix-toggle-button>
       <ix-toggle-button
-        variant="Primary"
+        variant="primary"
         outline="false"
         ghost
         class="m-1"
