fix(core/toggle-button|icon-toggle-button): make secondary default

--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
@@ -18,20 +18,24 @@ LICENSE file in the root directory of this source tree.
     <div>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         icon="checkboxes"
         disabled
         loading
@@ -39,23 +43,27 @@ LICENSE file in the root directory of this source tree.
 
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="16"
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="16"
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="16"
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="16"
         icon="checkboxes"
         disabled
@@ -64,23 +72,27 @@ LICENSE file in the root directory of this source tree.
 
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="12"
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="12"
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="12"
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
+        outline
         size="12"
         icon="checkboxes"
         disabled
