--- a/packages/html-test-app/src/preview-examples/toggle-button-secondary.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-secondary.html
@@ -16,14 +16,10 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button outline="false" class="m-1">Normal</ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1" pressed>
-        Pressed
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1" disabled>
-        Disabled
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1" disabled loading>
+      <ix-toggle-button class="m-1">Normal</ix-toggle-button>
+      <ix-toggle-button class="m-1" pressed> Pressed </ix-toggle-button>
+      <ix-toggle-button class="m-1" disabled> Disabled </ix-toggle-button>
+      <ix-toggle-button class="m-1" disabled loading>
         Loading
       </ix-toggle-button>
     </div>
