--- a/packages/core/src/tests/icon-toggle-button/basic/index.html
+++ b/packages/core/src/tests/icon-toggle-button/basic/index.html
@@ -19,36 +19,36 @@ SPDX-License-Identifier: MIT
     </style>
   </head>
   <body>
-    <ix-icon-toggle-button size="12" icon="checkboxes"></ix-icon-toggle-button>
-    <ix-icon-toggle-button size="12" icon="checkboxes" pressed>
+    <ix-icon-toggle-button outline size="12" icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button outline size="12" icon="checkboxes" pressed>
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button size="12" icon="checkboxes" disabled>
-    </ix-icon-toggle-button>
-
-    <ix-icon-toggle-button size="16" icon="checkboxes"></ix-icon-toggle-button>
-    <ix-icon-toggle-button size="16" icon="checkboxes" pressed>
-    </ix-icon-toggle-button>
-    <ix-icon-toggle-button size="16" icon="checkboxes" disabled>
+    <ix-icon-toggle-button outline size="12" icon="checkboxes" disabled>
     </ix-icon-toggle-button>
 
-    <ix-icon-toggle-button icon="checkboxes"></ix-icon-toggle-button>
-    <ix-icon-toggle-button icon="checkboxes" pressed></ix-icon-toggle-button>
-    <ix-icon-toggle-button icon="checkboxes" disabled></ix-icon-toggle-button>
+    <ix-icon-toggle-button outline size="16" icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button outline size="16" icon="checkboxes" pressed>
+    </ix-icon-toggle-button>
+    <ix-icon-toggle-button outline size="16" icon="checkboxes" disabled>
+    </ix-icon-toggle-button>
 
-    <ix-icon-toggle-button ghost outline="false" icon="checkboxes">
+    <ix-icon-toggle-button outline icon="checkboxes"></ix-icon-toggle-button>
+    <ix-icon-toggle-button outline icon="checkboxes" pressed></ix-icon-toggle-button>
+    <ix-icon-toggle-button outline icon="checkboxes" disabled></ix-icon-toggle-button>
+
+    <ix-icon-toggle-button ghost icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button ghost outline="false" pressed icon="checkboxes">
+    <ix-icon-toggle-button ghost pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button ghost outline="false" disabled icon="checkboxes">
+    <ix-icon-toggle-button ghost disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" icon="checkboxes">Normal</ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" pressed icon="checkboxes">
+    <ix-icon-toggle-button icon="checkboxes">Normal</ix-icon-toggle-button>
+    <ix-icon-toggle-button pressed icon="checkboxes">
       Pressed
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button outline="false" disabled icon="checkboxes">
+    <ix-icon-toggle-button disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
   </div>
@@ -63,13 +63,12 @@ SPDX-License-Identifier: MIT
     <ix-icon-toggle-button variant="primary" outline disabled icon="checkboxes">
       Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button variant="primary" ghost outline="false" icon="checkboxes">
+    <ix-icon-toggle-button variant="primary" ghost icon="checkboxes">
       Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
       variant="primary"
       ghost
-      outline="false"
       pressed
       icon="checkboxes"
     >
@@ -77,7 +76,6 @@ SPDX-License-Identifier: MIT
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
       variant="primary"
-      outline="false"
       ghost
       disabled
       icon="checkboxes"
