--- a/packages/core/src/tests/toggle-button/basic/index.html
+++ b/packages/core/src/tests/toggle-button/basic/index.html
@@ -20,29 +20,21 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <div>
-      <ix-toggle-button class="m-1">Normal</ix-toggle-button>
-      <ix-toggle-button class="m-1" pressed>Pressed</ix-toggle-button>
-      <ix-toggle-button class="m-1" disabled>Disabled</ix-toggle-button>
+      <ix-toggle-button outline class="m-1">Normal</ix-toggle-button>
+      <ix-toggle-button outline class="m-1" pressed>Pressed</ix-toggle-button>
+      <ix-toggle-button outline class="m-1" disabled>Disabled</ix-toggle-button>
       <ix-toggle-button ghost outline="false" class="m-1">
         Normal
       </ix-toggle-button>
-      <ix-toggle-button ghost outline="false" class="m-1" pressed>
-        Pressed
-      </ix-toggle-button>
-      <ix-toggle-button ghost outline="false" class="m-1" disabled>
-        Disabled
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1"> Normal </ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1" pressed>
-        Pressed
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" class="m-1" disabled>
-        Disabled
-      </ix-toggle-button>
+      <ix-toggle-button ghost class="m-1" pressed> Pressed </ix-toggle-button>
+      <ix-toggle-button ghost class="m-1" disabled> Disabled </ix-toggle-button>
+      <ix-toggle-button class="m-1"> Normal </ix-toggle-button>
+      <ix-toggle-button class="m-1" pressed> Pressed </ix-toggle-button>
+      <ix-toggle-button class="m-1" disabled> Disabled </ix-toggle-button>
     </div>
 
     <div>
-      <ix-toggle-button variant="primary" class="m-1">
+      <ix-toggle-button variant="primary" outline class="m-1">
         Normal
       </ix-toggle-button>
       <ix-toggle-button variant="primary" outline class="m-1" pressed>
@@ -51,25 +43,13 @@ SPDX-License-Identifier: MIT
       <ix-toggle-button variant="primary" outline class="m-1" disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="primary" ghost outline="false" class="m-1">
+      <ix-toggle-button variant="primary" ghost class="m-1">
         Normal
       </ix-toggle-button>
-      <ix-toggle-button
-        variant="primary"
-        ghost
-        outline="false"
-        class="m-1"
-        pressed
-      >
+      <ix-toggle-button variant="primary" ghost class="m-1" pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button
-        variant="primary"
-        outline="false"
-        ghost
-        class="m-1"
-        disabled
-      >
+      <ix-toggle-button variant="primary" ghost class="m-1" disabled>
         Disabled
       </ix-toggle-button>
     </div>
