--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-outline.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-primary-outline.html
@@ -19,23 +19,27 @@ LICENSE file in the root directory of this source tree.
       <ix-icon-toggle-button
         class="m-1"
         variant="Primary"
+        outline
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
         variant="Primary"
+        outline
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
         variant="Primary"
+        outline
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
         class="m-1"
         variant="Primary"
+        outline
         icon="checkboxes"
         disabled
         loading
