--- a/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-primary-outline.html
@@ -16,14 +16,16 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button variant="Primary" class="m-1">Normal</ix-toggle-button>
-      <ix-toggle-button variant="Primary" class="m-1" pressed>
+      <ix-toggle-button variant="Primary" outline class="m-1"
+        >Normal</ix-toggle-button
+      >
+      <ix-toggle-button variant="Primary" outline class="m-1" pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" class="m-1" disabled>
+      <ix-toggle-button variant="Primary" outline class="m-1" disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" class="m-1" disabled loading>
+      <ix-toggle-button variant="Primary" outline class="m-1" disabled loading>
         Loading
       </ix-toggle-button>
     </div>
