--- a/packages/html-test-app/src/preview-examples/toggle-button-secondary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-secondary-ghost.html
@@ -16,16 +16,10 @@ LICENSE file in the root directory of this source tree.
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button outline="false" ghost class="m-1">
-        Normal
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" ghost class="m-1" pressed>
-        Pressed
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" ghost class="m-1" disabled>
-        Disabled
-      </ix-toggle-button>
-      <ix-toggle-button outline="false" ghost class="m-1" disabled loading>
+      <ix-toggle-button ghost class="m-1"> Normal </ix-toggle-button>
+      <ix-toggle-button ghost class="m-1" pressed> Pressed </ix-toggle-button>
+      <ix-toggle-button ghost class="m-1" disabled> Disabled </ix-toggle-button>
+      <ix-toggle-button ghost class="m-1" disabled loading>
         Loading
       </ix-toggle-button>
     </div>
