--- a/packages/html-test-app/src/index.html
+++ b/packages/html-test-app/src/index.html
@@ -13,7 +13,7 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="theme-classic-new-dark">
     <!-- Preview code -->
     <ix-button id="test-button" class="m-1" variant="primary">Button</ix-button>
     <!-- Preview code -->
