refactor(core/icon-toggle-button): use base button

--- a/packages/core/src/tests/icon-toggle-button/basic/index.html
+++ b/packages/core/src/tests/icon-toggle-button/basic/index.html
@@ -36,35 +36,26 @@ SPDX-License-Identifier: MIT
     <ix-icon-toggle-button outline icon="checkboxes" disabled></ix-icon-toggle-button>
 
     <ix-icon-toggle-button ghost icon="checkboxes">
-      Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button ghost pressed icon="checkboxes">
-      Pressed
     </ix-icon-toggle-button>
     <ix-icon-toggle-button ghost disabled icon="checkboxes">
-      Disabled
     </ix-icon-toggle-button>
-    <ix-icon-toggle-button icon="checkboxes">Normal</ix-icon-toggle-button>
+    <ix-icon-toggle-button icon="checkboxes"></ix-icon-toggle-button>
     <ix-icon-toggle-button pressed icon="checkboxes">
-      Pressed
     </ix-icon-toggle-button>
     <ix-icon-toggle-button disabled icon="checkboxes">
-      Disabled
     </ix-icon-toggle-button>
   </div>
 
   <div>
     <ix-icon-toggle-button variant="primary" outline icon="checkboxes">
-      Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button variant="primary" outline pressed icon="checkboxes">
-      Pressed
     </ix-icon-toggle-button>
     <ix-icon-toggle-button variant="primary" outline disabled icon="checkboxes">
-      Disabled
     </ix-icon-toggle-button>
     <ix-icon-toggle-button variant="primary" ghost icon="checkboxes">
-      Normal
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
       variant="primary"
@@ -72,7 +63,6 @@ SPDX-License-Identifier: MIT
       pressed
       icon="checkboxes"
     >
-      Pressed
     </ix-icon-toggle-button>
     <ix-icon-toggle-button
       variant="primary"
@@ -80,7 +70,6 @@ SPDX-License-Identifier: MIT
       disabled
       icon="checkboxes"
     >
-      Disabled
     </ix-icon-toggle-button>
   </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
