--- a/packages/core/src/tests/pagination/basic/index.html
+++ b/packages/core/src/tests/pagination/basic/index.html
@@ -18,6 +18,7 @@ SPDX-License-Identifier: MIT
       style="
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         justify-content: center;
         position: relative;
         margin-top: 2rem;
