--- a/packages/core/src/tests/breadcrumb/basic/index.html
+++ b/packages/core/src/tests/breadcrumb/basic/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-breadcrumb>
+    <ix-breadcrumb ghost="false">
       <ix-breadcrumb-item icon="home" label="Root"></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 1"></ix-breadcrumb-item>
       <ix-breadcrumb-item
