--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -29,7 +29,7 @@ SPDX-License-Identifier: MIT
     </script>
   </head>
 
-  <body style="margin: 0px; height: 100vh">
+  <body style="margin: 0px; height: 100vh" class="theme-classic-dark">
     <my-component />
   </body>
 </html>
