--- a/packages/core/src/tests/push-card/basic/index.html
+++ b/packages/core/src/tests/push-card/basic/index.html
@@ -19,63 +19,81 @@ SPDX-License-Identifier: MIT
       notification="99"
       heading="Heading content"
       subheading="Subheading"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="insight"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="notification"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="alarm"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="critical"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="warning"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="success"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="info"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="neutral"
-    ></ix-push-card>
+    >
+      <ix-topography format="h2">Some Content</ix-topography>
+    </ix-push-card>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
