refactor: dayjs, fix: infinite scroll

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -30,6 +30,7 @@ SPDX-License-Identifier: MIT
   </head>
 
   <body style="margin: 0px; height: 100vh" class="theme-classic-dark">
+    <ix-date-picker></ix-date-picker>
     <my-component />
   </body>
 </html>
