test: fix tests

--- a/packages/core/src/tests/menu-avatar/basic/index.html
+++ b/packages/core/src/tests/menu-avatar/basic/index.html
@@ -25,7 +25,7 @@ SPDX-License-Identifier: MIT
       </ix-menu>
     </ix-basic-navigation>
     <script>
-      document.querySelector('ix-menu').breakpoints = ['small', 'medium'];
+      document.querySelector('ix-basic-navigation').breakpoints = ['sm', 'md'];
     </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
