refactor: apply review comments

--- a/packages/angular-test-app/src/preview-examples/grid-fluid.html
+++ b/packages/angular-test-app/src/preview-examples/grid-fluid.html
@@ -7,7 +7,7 @@ This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
 <div class="example-parent">
-  <h4>None fluid (default)</h4>
+  <h4>Non fluid (default)</h4>
   <ix-grid>
     <ix-row>
       <ix-col>1</ix-col>
