--- a/packages/angular-test-app/src/preview-examples/grid-size.html
+++ b/packages/angular-test-app/src/preview-examples/grid-size.html
@@ -6,7 +6,7 @@ SPDX-License-Identifier: MIT
 This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
-<h4>Column 6 takes all space until reached column 12</h4>
+<h4>Column 6 takes up more space to a max of 12 columns total</h4>
 <ix-grid>
   <ix-row>
     <ix-col>1</ix-col>
@@ -18,7 +18,7 @@ LICENSE file in the root directory of this source tree.
   </ix-row>
 </ix-grid>
 
-<h4>Stack on smaller screens as md</h4>
+<h4>Stack columns on smaller screens</h4>
 <ix-grid>
   <ix-row>
     <ix-col size="12" size-md="3">1</ix-col>
