--- a/packages/html-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/html-test-app/src/preview-examples/theme-switcher.html
@@ -13,6 +13,7 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <style>
       ix-col {
+        display: flex;
         align-items: center;
         height: 2.5rem;
       }
