docs: remove angular syntax

--- a/packages/html-test-app/src/preview-examples/theme-switcher.html
+++ b/packages/html-test-app/src/preview-examples/theme-switcher.html
@@ -32,12 +32,7 @@ SPDX-License-Identifier: MIT
       <ix-row>
         <ix-col size="2">Theme</ix-col>
         <ix-col>
-          <ix-select
-            id="select-theme"
-            [selectedIndices]="selectedTheme"
-            (itemSelectionChange)="onItemSelectionChange($event)"
-            placeholder="Select a theme"
-          >
+          <ix-select id="select-theme" placeholder="Select a theme">
           </ix-select>
         </ix-col>
       </ix-row>
