--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -31,5 +31,6 @@ SPDX-License-Identifier: MIT
 
   <body style="margin: 0px; height: 100vh">
     <my-component />
+    <ix-date-picker></ix-date-picker>
   </body>
 </html>
